# flutter_examples

ffi/ffi_with_other_lib/: README.md  ffigen.yaml
ffi/ffi_with_other_lib/android/: settings.gradle
ffi/ffi_with_other_lib/android/src/main/jniLibs/arm64-v8a/include/: test_static.h
ffi/ffi_with_other_lib/android/src/main/jniLibs/armeabi-v7a/include/: test_shared.h
ffi/ffi_with_other_lib/example/android/app/src/main/: AndroidManifest.xml
ffi/ffi_with_other_lib/example/lib/: main.dart
ffi/ffi_with_other_lib/ios/: test_ffi.podspec
ffi/ffi_with_other_lib/ios/Frameworks/libtest_static.xcframework/: Info.plist
ffi/ffi_with_other_lib/lib/: test_ffi.dart  test_ffi_bindings_generated.dart
ffi/ffi_with_other_lib/src/: CMakeLists.txt  test_ffi.c  test_ffi.h
ffi/ffi_with_other_lib/test_shared/: CMakeLists.txt  build_android.sh  build_ios.sh  test_shared.c
ffi/ffi_with_other_lib/test_static/: build_android.sh  build_ios.sh  test_static.c
ffi/ffi_with_static_lib/: README.md  pubspec.yaml
ffi/ffi_with_static_lib/android/: build.gradle
ffi/ffi_with_static_lib/android/src/main/: AndroidManifest.xml
ffi/ffi_with_static_lib/example/: README.md  pubspec.yaml
ffi/ffi_with_static_lib/example/android/app/: build.gradle
ffi/ffi_with_static_lib/example/android/app/src/main/kotlin/com/example/test_ffi_example/: MainActivity.kt
ffi/ffi_with_static_lib/example/ios/Runner/: Info.plist
ffi/ffi_with_static_lib/example/ios/Runner.xcodeproj/: project.pbxproj
ffi/ffi_with_static_lib/example/lib/: main.dart
ffi/ffi_with_static_lib/ios/: test_ffi.podspec
ffi/ffi_with_static_lib/ios/Classes/: test_ffi.c
ffi/ffi_with_static_lib/ios/Frameworks/libtest_static.xcframework/ios-arm64_x86_64-simulator/: Headers
ffi/ffi_with_static_lib/lib/: test_ffi.dart
ffi/ffi_with_static_lib/src/: test_ffi.h  test_static.h
ffi/ffi_with_static_lib/test_static/: build.sh
